k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-application
spec:
  type: ClusterIP
  selector:
    app: crud-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
